--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,20 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300");
+
+* {
+	top: 0; left: 0;
+	margin: 0; padding: 0;
+}
+
+html {
+	height: 100%;
+}
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
+	font-size: 20px;
+	height: 100%;
+}
+
+#root {
+	height: 100%;
 }
