--- a/client/src/containers/App/index.css
+++ b/client/src/containers/App/index.css
@@ -6,7 +6,9 @@
 .App-header {
   background-color: rgb(145,0,1);
 	padding: 1rem;
+	height: 5.5rem;
   color: white;
+	font-weight: bold;
 }
 
 .App-title {
@@ -15,5 +17,6 @@
 
 .body {
 	background-color: rgb(226,226,218);
-	height: 100%;
+	height: calc(100% - 5.5rem);
+	padding: 1rem;
 }
