--- a/client/src/containers/All/index.css
+++ b/client/src/containers/All/index.css
@@ -16,11 +16,13 @@
 #all-classes-title {
 	font-weight: bold;
 	width: 100%;
-	height: 2rem;
+	height: 3rem;
+	font-size: 1.8rem;
 }
 
 #all-classes-search {
 	display: block;
+	cursor: text;
 	border: 1px solid black;
 	width: 100%;
 	height: 2rem;
@@ -32,7 +34,7 @@
 #all-classes-list {
 	border: 1px solid black;
 	width: 100%;
-	height: calc(100% - 5rem);
+	height: calc(100% - 6rem);
 	margin-top: 1rem;
 	overflow-y: scroll;
 }
@@ -41,6 +43,15 @@
 	border: 1px solid black;
 	padding: 0.25rem;
 	padding-left: 1rem;
+	cursor: pointer;
+}
+
+.course-card * {
+	cursor: pointer;
+}
+
+.course-title {
+	font-size: 0.8rem;
 }
 
 #all-right {
@@ -54,12 +65,55 @@
 #candidates-title {
 	font-weight: bold;
 	width: 100%;
-	height: 2rem;
+	height: 3rem;
+	font-size: 1.8rem;
 }
 
 #candidates-list {
 	border: 1px solid black;
 	width: 100%;
-	height: calc(100% - 2rem);
+	height: calc(100% - 3rem);
 	overflow-y: scroll;
+}
+
+.candidate-card {
+	width: 100%;
+	border: 1px solid black;
+	padding: 1rem;
+	padding-top: 1rem;
+	cursor: pointer;
+}
+
+.candidate-card * {
+	cursor: pointer;
+}
+
+.candidate-card p {
+	font-size: 0.9rem;
+	padding-left: 1rem;
+}
+
+.candidate-name {
+	font-weight: bold;
+	font-size: 1.5rem !important;
+	padding-left: 0rem !important;
+}
+
+.candidate-title {
+	font-weight: bold;
+	font-size: 1rem !important;
+	padding-left: 0rem !important;
+}
+
+#toWeek {
+	position: absolute;
+	top: calc(100% - 4rem);
+	left: calc(100% - 12rem);
+	background-color: rgb(145,0,1);
+	color: white;
+	padding: 0.5rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	font-weight: bold;
+	cursor: pointer;
 }
