--- a/client/src/containers/All/index.css
+++ b/client/src/containers/All/index.css
@@ -105,7 +105,7 @@
 	padding-left: 0rem !important;
 }
 
-#toWeek {
+#toBrowse {
 	position: absolute;
 	top: calc(100% - 4rem);
 	left: calc(100% - 12rem);
