--- a/client/src/containers/Login/index.css
+++ b/client/src/containers/Login/index.css
@@ -16,7 +16,15 @@
 	font-weight: bold;
 	text-align: center;
 	padding: 1rem;
-	margin-bottom: 1.5rem;
+	margin-bottom: 0.5rem;
+}
+
+#login-error {
+	padding: 0; margin: 0;
+	color: red;
+	display: block;
+	text-align: center;
+	margin-bottom: 1rem;
 }
 
 #login-form > label {
