--- a/client/src/containers/Browse/index.css
+++ b/client/src/containers/Browse/index.css
@@ -20,6 +20,22 @@
 	font-size: 1.8rem;
 }
 
+#final-candidates-list {
+	width: 100%;
+	height: calc(100% - 5rem);
+}
+
+#browse-filters {
+	background-color: rgb(200,200,200);
+	width: 100%;
+	height: 2rem;
+	font-size: 1.3rem;
+	padding-top: 0.1rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	text-align: right;
+}
+
 #browse-right {
 	display: inline-block;
 	width: 75%;
